# janus_chatbot

./: .gitignore  LICENSE  README.md  local_ui.py  main.py  pyproject.toml  requirements.txt  testing.md
bots/: discord_app.py  telegram_app.py
core/: cache.db  cache_manager.py  message_handler.py  rag.db  rag_engine.py  state_manager.py  vision_engine.py
data/: emergency_contacts.txt  it_support_faq.txt  leave_policy.md  remote_work_guidelines.md
